fix notification z-index

--- a/css/xbmc.css
+++ b/css/xbmc.css
@@ -122,6 +122,7 @@ div.notifications {
     right: 20px;
     top: 20px;
     background: rgba(0, 0, 0, 0.3);
+    z-index: 10;
 
     transition: all 0.2s linear;
     -webkit-transition: all 0.2s linear;
@@ -367,24 +368,11 @@ modal styles
 
 .modal.ng-hide-add, .modal.ng-hide-remove {
     display: block !important;
-    /*opacity: 1;*/
-    transform: scale(1);
+    opacity: 1;
 }
 
 .modal.ng-hide {
-    /*opacity: 0;*/
-    transform: scale(0);
-}
-
-.modal.ng-show-add, .modal.ng-show-remove {
-    display: block !important;
-    /*opacity: 1;*/
-    transform: scale(1);
-}
-
-.modal.ng-hide {
-    /*opacity: 0;*/
-    transform: scale(0);
+    opacity: 0;
 }
 
 .modal-overlay {
